--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
   },
   "target": "web",
   "dependencies": {
-    "react": "^17.0.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
