--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.1",
-    "react-router-sitemap": "^1.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
@@ -43,7 +42,6 @@
   "devDependencies": {
     "@babel/node": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
-    "@babel/preset-react": "^7.16.0",
-    "react-router-sitemap-generator": "^0.0.8"
+    "@babel/preset-react": "^7.16.0"
   }
 }
