--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-register": "^6.26.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "gsap": "^3.8.0",
     "history": "^5.1.0",
     "mysql2": "^2.3.3",
     "pg": "^8.7.1",
